# prediction-market-execution-lab

./: .env.example  .gitignore  README.md  attribute_live_pnl.py  backtest_ml_filter.py  backtest_ml_walkforward_ticks.py  backtest_take_profit.py  backtest_ticks.py  bot.py  build_ml_signal_dataset.py  compress_tick_snapshots.py  deploy.sh  ml_filter.py  monte_carlo_ledger.py  polymarket_allowance_maintenance.py  polymarket_auto_claim.py  prediction-market-execution-lab.md  pyproject.toml  requirements.txt  train_live_candidate_model.py  train_ml_filter.py  validate_ml_on_live_executions.py
dashboard/: app.py
docs/: architecture.md  data_preparation.md  deployment.md  limitations.md  methodology.md  project_brief.md  public_migration_plan.md  public_release_checklist.md  sample_data_schema.md
models/: signal_filter_lgbm_v1.txt  signal_filter_lgbm_v1_features.json
notebooks/: 01_data_overview.ipynb  02_execution_quality_analysis.ipynb  03_fair_probability_reference_price.ipynb  04_probability_calibration.ipynb  05_ml_filter_diagnostics.ipynb  06_risk_simulation.ipynb  README.md
reports/: execution_quality_report.md  ml_filter_report.md  probability_calibration_report.md  risk_simulation_report.md
scripts/: generate_report_figures.py  inspect_private_ledger.py  inspect_private_ticks.py  inspect_source_ledger.py  inspect_source_ticks.py  prepare_public_sample_data.py  run_execution_quality_report.py  run_ml_filter_demo.py  run_monte_carlo_simulation.py  run_probability_calibration_report.py  run_tick_replay_backtest.py
site/: CNAME  index.html  styles.css
(+35 files in other folders)
