[project]
name = "prediction-market-execution-lab"
version = "0.1.0"
description = "Research lab for executable edge analysis in short-horizon prediction markets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kyle" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pyarrow>=15.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.29",
]
dashboard = [
  "streamlit>=1.36",
]
ml = [
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
